objects/WorkCompLostCost__c.object
<CustomObject>
    <fields>
        <fullName>LostCost__c</fullName>
        <label>Loss Cost</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PlanYear__c</fullName>
        <label>Plan Year</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProductIDTEXT__c</fullName>
        <label>Product ID TEXT</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProductName__c</fullName>
        <formula>Product__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipName>Work_Comp_Lost_Cost</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>State</valueSetName>
        </valueSet>
    </fields>
    <label>Work Comp Loss Cost</label>
    <nameField>
        <displayFormat>WCLC-{000000000}</displayFormat>
        <label>Work Comp Lost Cost Ref #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Work Comp Loss Cost</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Product__c</columns>
        <columns>LostCost__c</columns>
        <columns>PlanYear__c</columns>
        <columns>State__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>x2017</fullName>
        <columns>NAME</columns>
        <columns>Product__c</columns>
        <columns>LostCost__c</columns>
        <columns>PlanYear__c</columns>
        <columns>State__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PlanYear__c</field>
            <operation>equals</operation>
            <value>2017</value>
        </filters>
        <label>2017</label>
    </listViews>
    <listViews>
        <fullName>x2018</fullName>
        <columns>NAME</columns>
        <columns>Product__c</columns>
        <columns>LostCost__c</columns>
        <columns>PlanYear__c</columns>
        <columns>State__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PlanYear__c</field>
            <operation>equals</operation>
            <value>2018</value>
        </filters>
        <label>2018</label>
    </listViews>
</CustomObject>